@@ -1,5 +1,9 @@
 2011-02-06 S. Thiell <stephane.thiell@cea.fr>
 
+	* CLI/Clush.py: Allow clush to run without argument when stdin is not a
+	tty, by disabling ssh pseudo-tty allocation. You can now type `echo uname
+	| clush -w <nodes>` (ticket #134).
+
 	* Worker/Ssh.py: Fix issue when more than one ssh options are specified
 	with -o or in clush.conf (ticket #138).
 
